sumo/tests/duarouter/errors/false_output/options.duarouter
--net-file=net.net.xml --trip-defs=input_trips.trips.xml -o output/routes.rou.xml
